
We reduced the scope for running spec directories, files, a single file or individual spec in TextMate to source.ruby.rspec. This allowed us to restore the standard Ruby shortcuts:

CMD-R runs all the specs in one file
CMD-SHIFT-R runs an individual spec
CMD-OPT-R runs any files or directories selected in the TextMate drawer

* Changed Spec::DSL::Behaviour to Spec::DSL::ExampleGroup
* Changed Spec::DSL::SharedBehaviour to Spec::DSL::SharedExampleGroup
* Applied [#14023] Small optimization for heavily proxied objects. (Patch from Ian Leitch)
* Applied [#13943] ProfileFormatter (Top 10 slowest examples) (Patch from Ian Leitch)
* Fixed [#15232] heckle is not working correctly in trunk (as of r2801)
* Applied [#14399] Show pending reasons in HTML report (Patch from Bryan Helmkamp)
* Discovered fixed: [#10263] mock "leak" when setting an expectation in a block passed to mock#should_receive
* Fixed [#14671] Spec::DSL::ExampleRunner gives "NO NAME because of --dry-run" for every example for 'rake spec:doc'
* Fixed [#14543] rspec_scaffold broken with Rails 2.0
* Removed Patch [#10577] Rails with Oracle breaks 0.9.2 - was no longer necessary since we moved describe to the Main object (instead of Object)
* Fixed [#14527] specs run twice on rails 1.2.4 and rspec/rspec_on_rails trunk
* Applied [#14043] Change output ordering to show pending before errors (Patch from Mike Mangino)
* Applied [#14095] Don't have ./script/generate rspec create previous_failures.txt (Patch from Bryan Helmkamp)
* Applied [#14254] Improved error handling for Object#should and Object#should_not (Patch from Antti Tarvainen)
* Applied [#14186] Remove dead code from message_expecation.rb (Patch from Antti Tarvainen)
* Applied [#14183] Tiny improvement on mock_spec.rb (Patch from Antti Tarvainen)
* Applied [#14208] Fix to Mock#method_missing raising NameErrors instead of MockExpectationErrors (Patch from Antti Tarvainen)